# Mutsumi

./: .gitignore  AGENT.md  AGENT_cn.md  AGENT_ja.md  CLAUDE.md  CLAUDE_cn.md  CLAUDE_ja.md  CONTRIBUTING.md  CONTRIBUTING_cn.md  CONTRIBUTING_ja.md  LICENSE  README.md  README_cn.md  README_ja.md  pyproject.toml
.github/workflows/: ci.yml  deploy-docs.yml
docs/: BETA_USAGE.md  BETA_USAGE_cn.md  BETA_USAGE_ja.md  BETA_V1.md  BETA_V1_cn.md  BETA_V1_ja.md  BRAND.md  BRAND_cn.md  BRAND_ja.md  ROADMAP.md  ROADMAP_cn.md  ROADMAP_ja.md
docs/rfc/: RFC-001-mutsumi-core.md  RFC-001-mutsumi-core_cn.md  RFC-001-mutsumi-core_ja.md  RFC-002-installation-and-onboarding.md  RFC-002-installation-and-onboarding_cn.md  RFC-002-installation-and-onboarding_ja.md  RFC-003-documentation-i18n.md  RFC-003-documentation-i18n_cn.md  RFC-003-documentation-i18n_ja.md  RFC-004-triple-input-parity.md  RFC-004-triple-input-parity_cn.md  RFC-004-triple-input-parity_ja.md  RFC-005-competitive-analysis.md  RFC-005-competitive-analysis_cn.md  RFC-005-competitive-analysis_ja.md  RFC-006-brand-narrative-reset.md  RFC-006-brand-narrative-reset_cn.md  RFC-006-brand-narrative-reset_ja.md  RFC-007-multi-source-hub.md  RFC-007-multi-source-hub_cn.md  RFC-007-multi-source-hub_ja.md  RFC-008-out-of-box-first-run-onboarding.md  RFC-008-out-of-box-first-run-onboarding_cn.md  RFC-008-out-of-box-first-run-onboarding_ja.md  RFC-009-calendar-view.md  RFC-009-calendar-view_cn.md  RFC-009-calendar-view_ja.md  RFC-010-capability-first-interaction-architecture.md  RFC-011-plugin-runtime-and-extension-architecture.md
docs/site/: astro.config.mjs  package-lock.json  package.json
docs/specs/: AGENT_PROTOCOL.md  AGENT_PROTOCOL_cn.md  AGENT_PROTOCOL_ja.md  DATA_CONTRACT.md  DATA_CONTRACT_cn.md  DATA_CONTRACT_ja.md  TUI_SPEC.md  TUI_SPEC_cn.md  TUI_SPEC_ja.md
examples/: config.toml  tasks.json
mutsumi/: __init__.py  app.py  cli.py  events.py
mutsumi/cli/: __init__.py  add.py  bye.py  done.py  edit.py  init_cmd.py  list_cmd.py  migrate.py  project.py  rm.py  schema.py  setup.py  validate.py
mutsumi/config/: __init__.py  keybindings.py  settings.py
mutsumi/core/: __init__.py  id.py  interaction.py  loader.py  models.py  paths.py  skill_installer.py  sources.py  watcher.py  writer.py
mutsumi/i18n/: __init__.py
mutsumi/onboarding/: __init__.py  agent_setup.py  bootstrap.py  files.py
mutsumi/skills/: __init__.py
mutsumi/themes/: __init__.py  builtin.py
mutsumi/tui/: __init__.py  confirm_bar.py  confirm_dialog.py  detail_panel.py  empty_state.py  footer_bar.py  header_bar.py  help_screen.py  key_manager.py  main_dashboard.py  onboarding_screen.py  search_bar.py  (+7 more)
scripts/: demo.sh  gen_docs.py  tmux-dev.sh
tests/: test_app.py  test_bootstrap.py  test_bye.py  test_cli.py  test_cli_commands.py  test_config.py  test_crud.py  test_events.py  test_help_screen.py  test_i18n.py  test_interaction_semantics.py  test_key_manager.py  test_keybindings.py  test_loader.py  test_main_dashboard.py  test_migrate.py  test_models.py  test_onboarding_screen.py  test_paths.py  test_project_cli.py  test_setup.py  test_skill_installer.py  test_sources.py  test_task_form_sources.py  test_themes.py  test_tier1_tier2.py  test_tui_crud.py  test_watcher.py  test_writer.py
(+105 files in other folders)
